$Id: History,v 1.65 2001-01-29 09:50:37 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

January 29, 2001 G.Cosmo (global-V03-00-02)
- Added generic class G4PolynomialSolver in HEPNumerics module, extracting
  logic from class G4Torus in geometry/solids/CSG.

January 16, 2001 G.Cosmo (global-V03-00-01)
- Minor fixes to last migration in management classes
  tagged global-STLmigration-V02.

January 09, 2001 H.Kurashige
- Full STL migration for G4PhysicsVector and related.

January 09, 2001 G.Cosmo (global-V03-00-00)
- Fixed bug in destructor of G4Allocator (report #181): use "delete"
  instead of "free" for deleting a page allocated with "new". 

December 13, 2000 G.Folger (global-V02-00-06)
- Added GNUmakefile to HEPRandom to handle "includes" gmake target.

November 20, 2000 G.Cosmo (global-V02-00-05)
- QA code cleanup and fixes to remove warnings from
  "-Wall -ansi -pedantic" g++ compiler options:
  o added/fixed declaration/implementation of private copy constructor
    and assignment operator where needed.
  o commented out variables declared and not used.
  o fixed declaration of variables used before being initialised.
  o fixed order of initialisation of member data in constructors.