@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4PhysicsVector.icc,v 1.3 2001-01-09 11:27:00 gcosmo Exp $
+// $Id: G4PhysicsVector.icc,v 1.4 2001-02-02 16:23:36 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -44,11 +44,6 @@ inline
   return numberOfBin;
 }
 
-inline 
- const G4PhysicsTable * G4PhysicsVector::GetNextTable() const
-{
-  return ptrNextTable;
-}
 
 
 inline
@@ -139,20 +134,6 @@ inline
   return status;
 }
 
-inline 
- void G4PhysicsVector::LinkPhysicsTable( G4PhysicsTable& theTable)
-{
-  ptrNextTable = &theTable;
-} 
-
-inline
- G4bool G4PhysicsVector::IsLinkedTableExist() const
-{
-  G4bool status=false;
-
-  if(ptrNextTable != 0) status=true;
-  return status;
-}
 
 inline 
  void G4PhysicsVector::PutComment(const G4String& theComment)
