@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4PhysicsLogVector.cc,v 1.5 2001-01-09 11:27:02 gcosmo Exp $
+// $Id: G4PhysicsLogVector.cc,v 1.6 2001-02-02 16:23:37 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -39,7 +39,6 @@ G4PhysicsLogVector::G4PhysicsLogVector(size_t theNbin)
   dataVector.reserve(theNbin+1);
   binVector.reserve(theNbin+1); 
 
-  ptrNextTable = 0;
   numberOfBin = theNbin;
   dBin = 0.;
   baseBin = 0.;
@@ -67,7 +66,6 @@ G4PhysicsLogVector::G4PhysicsLogVector(G4double theEmin,
   dataVector.reserve(theNbin+1);
   binVector.reserve(theNbin+1); 
 
-  ptrNextTable = 0;
   numberOfBin = theNbin;
   dBin = log10(theEmax/theEmin) / numberOfBin;
   baseBin = log10(theEmin)/dBin;
