@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4PhysicsVector.cc,v 1.7 2001-01-09 11:27:03 gcosmo Exp $
+// $Id: G4PhysicsVector.cc,v 1.8 2001-02-02 16:23:37 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -20,15 +20,14 @@
 //    01 Jul. 1996, K.Amako : Hidden bin from the user introduced
 //    12 Nov. 1998, K.Amako : A bug in GetVectorLength() fixed
 //    11 Nov. 2000, H.Kurashige : use STL vector for dataVector and binVector
-//
+//    18 Jan. 2001, H.Kurashige : remove ptrNextTable
 // --------------------------------------------------------------
 
 #include "G4PhysicsVector.hh"
 
 G4PhysicsVector::G4PhysicsVector()
  : edgeMin(0.), edgeMax(0.), numberOfBin(0),
-   lastEnergy(0.), lastValue(0.), lastBin(0),
-   ptrNextTable(0) 
+   lastEnergy(0.), lastValue(0.), lastBin(0)
 {}
 
 G4PhysicsVector::~G4PhysicsVector() 
@@ -42,7 +41,7 @@ G4PhysicsVector::G4PhysicsVector(const G4PhysicsVector& right)
    numberOfBin(right.numberOfBin), lastEnergy(right.lastEnergy),
    lastValue(right.lastValue), lastBin(right.lastBin),
    dataVector(right.dataVector), binVector(right.binVector),
-   ptrNextTable(right.ptrNextTable), comment(right.comment)
+   comment(right.comment)
 {}
 
 G4PhysicsVector&
@@ -58,7 +57,6 @@ G4PhysicsVector::operator=(const G4PhysicsVector& right)
   lastBin = right.lastBin;
   dataVector = right.dataVector;
   binVector = right.binVector;
-  ptrNextTable = right.ptrNextTable;
   comment = right.comment;
 
   return *this;
