@@ -1,4 +1,4 @@
-$Id: History,v 1.65 2001-01-29 09:50:37 gcosmo Exp $
+$Id: History,v 1.66 2001-02-02 16:23:59 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,16 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+February 01, 2001 G.Cosmo, H.Kurasige (global-V03-00-03)
+- Migration to STL vectors for G4OrderedTable and G4DataVector. In
+  G4OrderedTable, G4ValVector type has been removed and is now replaced
+  with G4DataVector.
+- Removed from G4PhysicsVector dependency over G4PhysicsTable.
+  Removed methods: LinkPhysicsTable(), IsLinkedTableExist() and
+  GetNextTable(). Removed data-member ptrNextTable.
+  Updated all related subclasses.
+- Updated unit tests in management/test.
 
 January 29, 2001 G.Cosmo (global-V03-00-02)
 - Added generic class G4PolynomialSolver in HEPNumerics module, extracting
